docs/apache-airflow-providers-google/8.5.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_batch_prediction_job/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_batch_prediction_job`
==============================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_batch_prediction_job

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Batch Prediction operations.



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: PROJECT_ID
   

   

.. py:data:: DAG_ID
   :annotation: = vertex_ai_batch_prediction_job_operations

   

.. py:data:: REGION
   :annotation: = us-central1

   

.. py:data:: FORECAST_DISPLAY_NAME
   

   

.. py:data:: MODEL_DISPLAY_NAME
   

   

.. py:data:: JOB_DISPLAY_NAME
   

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME
   

   

.. py:data:: DATA_SAMPLE_GCS_OBJECT_NAME
   :annotation: = vertex-ai/forecast-dataset.csv

   

.. py:data:: FORECAST_ZIP_CSV_FILE_LOCAL_PATH
   

   

.. py:data:: FORECAST_CSV_FILE_LOCAL_PATH
   :annotation: = /batch-prediction/forecast-dataset.csv

   

.. py:data:: FORECAST_DATASET
   

   

.. py:data:: TEST_TIME_COLUMN
   :annotation: = date

   

.. py:data:: TEST_TIME_SERIES_IDENTIFIER_COLUMN
   :annotation: = store_name

   

.. py:data:: TEST_TARGET_COLUMN
   :annotation: = sale_dollars

   

.. py:data:: COLUMN_SPECS
   

   

.. py:data:: BIGQUERY_SOURCE
   

   

.. py:data:: GCS_DESTINATION_PREFIX
   

   

.. py:data:: MODEL_PARAMETERS
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

